package main;

import donnees.CD;

public interface ComparateurCd {

    public boolean etreAvant(CD cd1, CD cd2);
}
